feat: Ajustes de design no  menu superior + informações flutuantes na lateral

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<!-- Header top mobile START -->
 					<div class="header-mobile-logo">
 						<a href="#">
-							<img src="images/logo-header.svg" alt="Engeplena Engenharia LTDA">
+							<img src="images/Engeplena Cor.svg" alt="Engeplena Engenharia LTDA">
 						</a>
 					</div>
 
@@ -159,11 +159,11 @@
 		</div>
 
 		<div class="header-bottom">
-			<div class="container">
+			<!-- <div class="container"> -->
 				<div class="header-bottom-row">
 					<div class="header-logo">
 						<a href="#">
-							<img src="images/logo-header.svg" alt="Construction">
+							<img src="images/Engeplena Cor.svg" alt="Engeplena Engenharia LTDA">
 						</a>
 					</div>
 
@@ -178,7 +178,7 @@
 						</ul>
 					</nav>
 				</div>
-			</div>
+			<!-- </div> -->
 		</div>
 
 
@@ -902,7 +902,20 @@
 		</div>
 	</footer>
 
-
+	<aside class="social-sidebar" aria-label="Redes Sociais">
+		<a href="https://wa.me/5531987950463" target="_blank" rel="noopener" aria-label="Fale conosco no Whatsapp">
+			<img src="images/social-facebook.svg" alt="" aria-hidden="true">
+		</a>
+		<a href="https://www.instagram.com/engeplena/" target="_blank" rel="noopener" aria-label="Siga-nos no Instagram">
+			<img src="images/social-facebook.svg" alt="" aria-hidden="true">
+		</a>
+		<a href="https://www.facebook.com/engeplena" target="_blank" rel="noopener" aria-label="Curta nossa página no Facebook">
+			<img src="images/social-facebook.svg" alt="" aria-hidden="true">
+		</a>
+		<a href="mailto:contato@engeplena.com.br" aria-label="Envie um Email">
+			<img src="images/social-facebook.svg" alt="" aria-hidden="true">
+		</a>
+	</aside>
 	<script src="js/jquery-3.7.0.min.js"></script>
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
