feat: Implementa logo interativa em 3D + ajustes responsivos no wrapper do banner

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <script type="application/ld+json">
+	
 {
   "@context": "https://schema.org",
   "@type": "EngineeringConstructionBusiness",
@@ -253,9 +254,34 @@
 					<a href="#s-services" class="def-btn anchor-link wow fadeInLeft" data-wow-delay="0.4s">Solicitar
 						Orçamento</a>
 				</div>
+				
+
 
 				<div class="about-right">
-					<img src="images/about-bg.jpg" alt="О нас" class="wow fadeIn" data-wow-delay="0.5s">
+					<!-- <div class="solid">
+						<div class="side"></div>
+						<div class="side"></div>
+						<div class="side"></div>
+						<div class="side"></div>
+						<div class="side"></div>
+						<div class="side"></div>
+						<div class="side"></div>
+						<div class="side"></div>
+					</div> -->
+					 <div class="scene">
+						<div class="solid">
+							<!-- 4 faces de cima -->
+							<div class="side top top1"></div>
+							<div class="side top top2"></div>
+							<div class="side top top3"></div>
+							<div class="side top top4"></div>
+							<!-- 4 faces de baixo -->
+							<div class="side bottom bottom1"></div>
+							<div class="side bottom bottom2"></div>
+							<div class="side bottom bottom3"></div>
+							<div class="side bottom bottom4"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -888,6 +914,8 @@
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/wow.min.js"></script>
+	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
