feat: Reestiliza seção de contato

--- a/index.html
+++ b/index.html
@@ -839,7 +839,6 @@
 						Teremos prazer em encaminhá-lo SEM CUSTO.
 					</div>
 					<div class="form-map">
-						<!-- <img src="images/form-bg.jpg" alt="Feedback form"> -->
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3743.1407826002496!2d-43.806745823220474!3d-20.252995281209376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6a9f7ba0ed1e3%3A0x3cf05f87311d2d10!2sENGEPLENA%20ENGENHARIA%20LTDA.!5e0!3m2!1spt-BR!2sbr!4v1763666061313!5m2!1spt-BR!2sbr"
 							width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
@@ -853,7 +852,7 @@
 						<input type="text" placeholder="Telefone*" required>
 						<input type="text" placeholder="Email">
 						<textarea cols="30" rows="5" placeholder="Mensagem"></textarea>
-						<button class="def-btn form-button">Enviar</button>
+						<button class="def-btn form-button" data-track="submit_contact_form">Enviar</button>
 					</form>
 				</div>
 
