feat: Ajustes finos de estilo

--- a/index.html
+++ b/index.html
@@ -1001,21 +1001,29 @@
 		</div>
 	</footer>
 
-	<aside class="social-sidebar" aria-label="Redes Sociais">
-
-		<a href="https://wa.me/5531987950463"  target="_blank" rel="noopener" aria-label="Fale conosco no Whatsapp">
-			<img src="images/whatsapp-outline.svg"  alt="" aria-hidden="true">
+	<aside class="social-sidebar" aria-label="Redes Sociais Flutuantes">
+		<a href="https://wa.me/5531987950463" target="_blank" rel="noopener noreferrer" 
+		aria-label="Fale conosco no Whatsapp" title="Fale conosco no Whatsapp"
+		data-track="click_whatsapp_sidebar">
+			<img src="images/whatsapp-outline.svg" alt="" aria-hidden="true" width="24" height="24">
 		</a>
-		<a href="https://www.instagram.com/engeplena/" target="_blank" rel="noopener" aria-label="Siga-nos no Instagram">
-			<img src="images/instagram-outline.svg" alt="" aria-hidden="true">
+		<a href="https://www.instagram.com/engeplena/" target="_blank" rel="noopener noreferrer" 
+		aria-label="Siga-nos no Instagram" title="Siga-nos no Instagram"
+		data-track="click_instagram_sidebar">
+			<img src="images/instagram-outline.svg" alt="" aria-hidden="true" width="24" height="24">
 		</a>
-		<a href="https://www.facebook.com/engeplena" target="_blank" rel="noopener" aria-label="Curta nossa página no Facebook">
-			<img src="images/facebook-outline.svg" alt="" aria-hidden="true">
+		<a href="https://www.facebook.com/engeplena" target="_blank" rel="noopener noreferrer" 
+		aria-label="Curta nossa página no Facebook" title="Curta nossa página no Facebook"
+		data-track="click_facebook_sidebar">
+			<img src="images/facebook-outline.svg" alt="" aria-hidden="true" width="24" height="24">
 		</a>
-		<a href="mailto:contato@engeplena.com.br" aria-label="Envie um Email">
-			<img src="images/email-outline.svg" alt="" aria-hidden="true">
+		<a href="mailto:contato@engeplena.com.br" 
+		aria-label="Envie um Email" title="Envie um Email"
+		data-track="click_email_sidebar">
+			<img src="images/email-outline.svg" alt="" aria-hidden="true" width="24" height="24">
 		</a>
 	</aside>
+	
 	<script src="js/jquery-3.7.0.min.js"></script>
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
