fix: Ajusta nome das seções do menu superior

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						<li><a class="anchor-link" href="#s-services">Serviços</a></li>
 						<li><a class="anchor-link" href="#s-gallery">Galeria</a></li>
 						<li><a class="anchor-link" href="#s-team">Equipe</a></li>
-						<li><a class="anchor-link" href="#s-covenant">Convênio</a></li>
+						<li><a class="anchor-link" href="#s-covenant">Clientes</a></li>
 						<li><a class="anchor-link" href="#s-contact">Contato</a></li>
 					</ul>
 				</nav>
