--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	<link rel="canonical" href="https://www.engeplena.com.br/" />
 
-	<link rel="icon" href="images/favicon.png">
+	<link rel="icon" href="images/favicon-white.svg">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
@@ -84,7 +84,7 @@
 
 		<div class="modal-form-head">
 			<div class="modal-form-logo">
-				<img src="images/Engeplena Cor.svg" alt="Engeplena Engenharia">
+				<img src="images/logo_colorida.png" alt="Engeplena Engenharia">
 			</div>
 			<div class="modal-form-close">
 				<img src="images/close.svg" alt="Close">
@@ -116,7 +116,7 @@
 
 					<div class="header-mobile-logo">
 						<a href="./" aria-label="Página Inicial">
-							<img src="images/Engeplena Cor.svg" alt="Engeplena Engenharia" >
+							<img src="images/logo_colorida.png" alt="Engeplena Engenharia" >
 						</a>
 					</div>
 
@@ -161,7 +161,7 @@
 			<div class="header-menu-row">
 				<div class="header-logo">
 					<a href="./" aria-label="Página Inicial">
-						<img src="images/Engeplena Cor.svg" alt="Engeplena Engenharia" >
+						<img src="images/logo_colorida.png" alt="Engeplena Engenharia" >
 					</a>
 				</div>
 
@@ -447,72 +447,101 @@
 		</div>
 	</section>
 
-	<section class="s-gallery" id="s-gallery">
+	<section class="s-portfolio-carousel" id="s-gallery" style="background-image: url('images/reviews-bg.png');">
 		<div class="container">
-			<h2 class="center-title wow fadeIn" data-wow-delay="0.1s">Portifólio</h2>
+			<h2 class="center-title color-white wow fadeIn" data-wow-delay="0.1s">Nosso Portfólio</h2>
 
-			<div class="gallery-wrap">
-				<a href="images/gallery-1.jpg" class="gallery-item wow fadeIn" data-effect="mfp-zoom-in"
-					data-wow-delay="0.2s">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-1.jpg" alt="Image 1">
-				</a>
-				<a href="images/gallery-2.jpg" class="gallery-item wow fadeIn" data-effect="mfp-zoom-in"
-					data-wow-delay="0.3s">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-2.jpg" alt="Image 2">
-				</a>
-				<a href="images/gallery-3.jpg" class="gallery-item wow fadeIn" data-effect="mfp-zoom-in"
-					data-wow-delay="0.4s">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-3.jpg" alt="Image 3">
-				</a>
-				<a href="images/gallery-4.jpg" class="gallery-item wow fadeIn" data-effect="mfp-zoom-in"
-					data-wow-delay="0.5s">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-4.jpg" alt="Image 4">
-				</a>
-				<a href="images/gallery-5.jpg" class="gallery-item wow fadeIn" data-effect="mfp-zoom-in"
-					data-wow-delay="0.6s">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-5.jpg" alt="Image 5">
-				</a>
-				<a href="images/gallery-6.jpg" class="gallery-item wow fadeIn" data-effect="mfp-zoom-in"
-					data-wow-delay="0.7s">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-6.jpg" alt="Image 6">
-				</a>
+			<div class="swiper portfolio-swiper">
+				<div class="swiper-wrapper">
 
-				<a href="images/gallery-7.jpg" class="gallery-item" data-effect="mfp-zoom-in">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-7.jpg" alt="Image 7">
-				</a>
-				<a href="images/gallery-8.jpg" class="gallery-item" data-effect="mfp-zoom-in">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-8.jpg" alt="Image 8">
-				</a>
-				<a href="images/gallery-9.jpg" class="gallery-item" data-effect="mfp-zoom-in">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-9.jpg" alt="Image 9">
-				</a>
-				<a href="images/gallery-10.jpg" class="gallery-item" data-effect="mfp-zoom-in">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-10.jpg" alt="Image 10">
-				</a>
-				<a href="images/gallery-11.jpg" class="gallery-item" data-effect="mfp-zoom-in">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-11.jpg" alt="Image 11">
-				</a>
-				<a href="images/gallery-12.jpg" class="gallery-item" data-effect="mfp-zoom-in">
-					<span class="gallery-border"></span>
-					<img src="images/gallery-12.jpg" alt="Image 12">
-				</a>
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.1s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-1.jpg" alt="Equipe analisando projeto em obra" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Acompanhamento Técnico</h3>
+								<div class="portfolio-cat">Gestão de Obras</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.2s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-2.jpg" alt="Construção de edifício residencial" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Edifício Residencial</h3>
+								<div class="portfolio-cat">Estrutural</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.3s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-3.jpg" alt="Estrutura metálica e andaimes" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Estruturas Metálicas</h3>
+								<div class="portfolio-cat">Montagem Industrial</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.4s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-5.jpg" alt="Instalação elétrica" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Instalações Elétricas</h3>
+								<div class="portfolio-cat">Predial</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.5s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-6.jpg" alt="Acabamento e alvenaria" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Execução de Alvenaria</h3>
+								<div class="portfolio-cat">Reforma</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.6s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-8.jpg" alt="Içamento de carga com guindaste" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Logística de Obra</h3>
+								<div class="portfolio-cat">Construção Pesada</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="swiper-slide">
+						<div class="portfolio-card wow fadeInUp" data-wow-delay="0.7s">
+							<div class="portfolio-thumb">
+								<img src="images/gallery-9.jpg" alt="Engenheiros em visita técnica" loading="lazy">
+							</div>
+							<div class="portfolio-body">
+								<h3 class="portfolio-title">Visita Técnica</h3>
+								<div class="portfolio-cat">Consultoria</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				
+				<div class="swiper-pagination"></div>
 			</div>
-
-			<div class="gallery-btn">
-				<a href="#" class="def-btn wow fadeInUp" data-wow-delay="0.2s">Ver mais</a>
-			</div>
-
 		</div>
 	</section>
 
@@ -535,7 +564,7 @@
 					<ul class="why-features">
 						<li class="why-features-item wow fadeInUp" data-wow-delay="0.3s">
 							<div class="why-features-icon">
-								<img src="images/check-mark.svg" alt="" aria-hidden="true" width="25" height="25">
+								<img src="images/favicon-green.svg" alt="" aria-hidden="true" width="25" height="25">
 							</div>
 							<div class="why-features-right">
 								<h3 class="why-features-title">
@@ -549,7 +578,7 @@
 
 						<li class="why-features-item wow fadeInUp" data-wow-delay="0.4s">
 							<div class="why-features-icon">
-								<img src="images/check-mark.svg" alt="" aria-hidden="true" width="25" height="25">
+								<img src="images/favicon-green.svg" alt="" aria-hidden="true" width="25" height="25">
 							</div>
 							<div class="why-features-right">
 								<h3 class="why-features-title">
@@ -573,7 +602,6 @@
 			</div>
 		</div>
 	</section>
-
 
 	<section class="s-team" id="s-team">
 		<div class="container">
@@ -615,156 +643,6 @@
 
 		</div>
 	</section>
-
-	<section class="s-reviews" id="s-covenant" style="background-image: url('images/reviews-bg.png');">
-		<div class="container">
-			<h2 class="center-title color-white wow fadeIn" data-wow-delay="0.1s">Depoimentos</h2>
-
-			<div class="swiper reviews-swiper">
-
-				<div class="swiper-wrapper">
-
-					<div class="swiper-slide">
-						<div class="reviews-item wow fadeInUp" data-wow-delay="0.2s">
-							<div class="reviews-thumb">
-								<img src="images/client-1.jpg" alt="Konstantin Kuzmin">
-							</div>
-
-							<div class="reviews-body">
-								<div class="reviews-name">Konstantin Kuzmin</div>
-								<div class="reviews-profi">Founder of LIFECONST</div>
-								<div class="reviews-comment">
-									I was very impressed with the result that I ordered. Construction Company has
-									fulfilled all my expectations!
-								</div>
-								<div class="reviews-social">
-									<a href="#"><img src="images/social-vk-gray.svg" alt="Вконтакте"></a>
-									<a href="#"><img src="images/social-facebook-gray.svg" alt="Facebook"></a>
-									<a href="#"><img src="images/social-telegram-gray.svg" alt="Telegram"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="reviews-item wow fadeInUp" data-wow-delay="0.3s">
-							<div class="reviews-thumb">
-								<img src="images/client-2.jpg" alt="Rakesh Juggernaut">
-							</div>
-
-							<div class="reviews-body">
-								<div class="reviews-name">Rakesh Juggernaut</div>
-								<div class="reviews-profi">Director of the BRUK shopping center</div>
-								<div class="reviews-comment">
-									Ordered design for our building. I am very pleased with the result. The company
-									treats its customers responsibly
-								</div>
-								<div class="reviews-social">
-									<a href="#"><img src="images/social-vk-gray.svg" alt="Вконтакте"></a>
-									<a href="#"><img src="images/social-facebook-gray.svg" alt="Facebook"></a>
-									<a href="#"><img src="images/social-telegram-gray.svg" alt="Telegram"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="reviews-item wow fadeInUp" data-wow-delay="0.4s">
-							<div class="reviews-thumb">
-								<img src="images/client-3.jpg" alt="Zabava Lukia">
-							</div>
-
-							<div class="reviews-body">
-								<div class="reviews-name">Zabava Lukia</div>
-								<div class="reviews-profi">Commercial director of MAGNUM</div>
-								<div class="reviews-comment">
-									I wanted to renovate my office. Booked a home repair service. The guys took care of
-									me from start to finish. I recommend!
-								</div>
-								<div class="reviews-social">
-									<a href="#"><img src="images/social-vk-gray.svg" alt="Вконтакте"></a>
-									<a href="#"><img src="images/social-facebook-gray.svg" alt="Facebook"></a>
-									<a href="#"><img src="images/social-telegram-gray.svg" alt="Telegram"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="reviews-item">
-							<div class="reviews-thumb">
-								<img src="images/client-4.jpg" alt="Kira Dorova">
-							</div>
-
-							<div class="reviews-body">
-								<div class="reviews-name">Kira Dorova</div>
-								<div class="reviews-profi">AUDITSTROY department manager</div>
-								<div class="reviews-comment">
-									Construction has fulfilled all my expectations. I was very impressed with the result
-									that I ordered.
-								</div>
-								<div class="reviews-social">
-									<a href="#"><img src="images/social-vk-gray.svg" alt="Вконтакте"></a>
-									<a href="#"><img src="images/social-facebook-gray.svg" alt="Facebook"></a>
-									<a href="#"><img src="images/social-telegram-gray.svg" alt="Telegram"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="reviews-item">
-							<div class="reviews-thumb">
-								<img src="images/client-5.jpg" alt="Alex Pakovsky">
-							</div>
-
-							<div class="reviews-body">
-								<div class="reviews-name">Alex Pakovsky</div>
-								<div class="reviews-profi">Founder of INVESTBASK company</div>
-								<div class="reviews-comment">
-									I ordered a renovation for my office from Construction. Everyone did great. I
-									recommend this company.
-								</div>
-								<div class="reviews-social">
-									<a href="#"><img src="images/social-vk-gray.svg" alt="Вконтакте"></a>
-									<a href="#"><img src="images/social-facebook-gray.svg" alt="Facebook"></a>
-									<a href="#"><img src="images/social-telegram-gray.svg" alt="Telegram"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="reviews-item">
-							<div class="reviews-thumb">
-								<img src="images/client-6.jpg" alt="Dina Cvetova">
-							</div>
-
-							<div class="reviews-body">
-								<div class="reviews-name">Dina Cvetova</div>
-								<div class="reviews-profi">Store owner FLOWERSMARK</div>
-								<div class="reviews-comment">
-									For a long time I was looking for solutions for the project I wanted to implement,
-									but Construction helped me with this. Highly recommend!
-								</div>
-								<div class="reviews-social">
-									<a href="#"><img src="images/social-vk-gray.svg" alt="Вконтакте"></a>
-									<a href="#"><img src="images/social-facebook-gray.svg" alt="Facebook"></a>
-									<a href="#"><img src="images/social-telegram-gray.svg" alt="Telegram"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="swiper-pagination"></div>
-
-			</div>
-
-		</div>
-	</section>
-
 
 	<section class="s-partners" id="s-partners">
 		<div class="container">
@@ -909,7 +787,7 @@
 				<div class="footer-left">
 					<div class="footer-logo">
 						<a href="#" aria-label="Voltar ao topo">
-							<img src="images/Engeplena Mono.svg" alt="Engeplena Engenharia" width="160" height="auto">
+							<img src="images/logo_mono.png" alt="Engeplena Engenharia" width="200" height="auto">
 						</a>
 					</div>
 					<div class="footer-desc">
