feat: Ajustes gerais

--- a/index.html
+++ b/index.html
@@ -603,46 +603,41 @@
 		</div>
 	</section>
 
-	<section class="s-team" id="s-team">
-		<div class="container">
-			<h2 class="center-title wow fadeIn" data-wow-delay="0.1s">Nosso time</h2>
+	<section class="s-team" id="s-team" aria-label="Nossa Equipe">
+    <div class="container">
+        <h2 class="center-title wow fadeIn" data-wow-delay="0.1s">Nosso time</h2>
 
-			<div class="team-row">
+        <div class="team-row">
 
-				<div class="team-item wow fadeInUp" data-wow-delay="0.2s">
-					<div class="team-thumb">
-						<img src="images/team-1.jpg" alt="Junaia de Paula Lacerda">
-					</div>
-					<div class="team-body">
-						<div class="team-profi">Engenheira Civil e Mestre em Eng. Ambiental)</div>
-						<div class="team-name">Junaia de Paula Lacerda</div>
-					</div>
-				</div>
+            <article class="team-item wow fadeInUp" data-wow-delay="0.2s">
+                <div class="team-thumb">
+                    <img src="images/team-1.jpg" 
+                         alt="Foto de Junaia de Paula Lacerda, Sócia da Engeplena" 
+                         loading="lazy" 
+                         width="400" height="400">
+                </div>
+                <div class="team-body">
+                    <h3 class="team-name">Junaia de Paula Lacerda</h3>
+                    <p class="team-profi">Engenheira Civil e Mestre em Eng. Ambiental</p>
+                </div>
+            </article>
 
-				<div class="team-item wow fadeInUp" data-wow-delay="0.3s">
-					<div class="team-thumb">
-						<img src="images/team-2.jpg" alt="Antônio Carlos Cunha Júnior">
-					</div>
-					<div class="team-body">
-						<div class="team-profi">Engenheiro Civil e Especialista em Gestão</div>
-						<div class="team-name">Antônio Carlos Cunha Júnior</div>
-					</div>
-				</div>
+            <article class="team-item wow fadeInUp" data-wow-delay="0.3s">
+                <div class="team-thumb">
+                    <img src="images/team-2.jpg" 
+                         alt="Foto de Antônio Carlos Cunha Júnior, Sócio da Engeplena" 
+                         loading="lazy"
+                         width="400" height="400">
+                </div>
+                <div class="team-body">
+                    <h3 class="team-name">Antônio Carlos Cunha Jr</h3>
+                    <p class="team-profi">Engenheiro Civil e Especialista em Gestão</p>
+                </div>
+            </article>
 
-				<!-- <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
-					<div class="team-thumb">
-						<img src="images/team-3.jpg" alt="Sergey Delfinov">
-					</div>
-					<div class="team-body">
-						<div class="team-profi">Finisher</div>
-						<div class="team-name">Sergey Delfinov</div>
-					</div>
-				</div> -->
-
-			</div>
-
-		</div>
-	</section>
+        </div>
+    </div>
+</section>
 
 	<section class="s-partners" id="s-partners">
 		<div class="container">
