feat: Aplica melhorias de desempenho

--- a/index.html
+++ b/index.html
@@ -67,14 +67,22 @@
 	<meta property="og:image:alt" content="Engeplena Engenharia - Projetos e Obras">
 
 	<link rel="canonical" href="https://www.engeplena.com.br/" />
-
 	<link rel="icon" href="images/favicon-white.svg">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
+	<link rel="stylesheet" 
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@300;400;500;700&display=swap" 
+      media="print" 
+      onload="this.media='all'">
+	<noscript>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@300;400;500;700&display=swap">
+	</noscript>
 	<title>Engeplena Engenharia - Desde 2006 no seu time | Itabirito-MG</title>
 </head>
 
@@ -793,7 +801,7 @@
 				<div class="footer-right">
 					
 					<nav class="footer-nav">
-						<h5 class="footer-title">Nossos serviços</h5>
+						<h3 class="footer-title">Nossos serviços</h3>
 						<ul>
 							<li><a href="#">Projetos de Engenharia</a></li>
 							<li><a href="#">Consultoria Ambiental</a></li>
@@ -802,7 +810,7 @@
 					</nav>
 
 					<div class="footer-nav">
-						<h5 class="footer-title">Horários</h5>
+						<h3 class="footer-title">Horários</h3>
 						<ul>
 							<li>Segunda: 08h - 17h</li>
 							<li>Terça: 08h - 17h</li>
@@ -815,7 +823,7 @@
 					</div>
 
 					<div class="footer-nav">
-						<h5 class="footer-title">Contatos</h5>
+						<h3 class="footer-title">Contatos</h3>
 						
 						<a href="https://maps.app.goo.gl/mqW2MmhR8gj7zPjw8" target="_blank" rel="noopener" class="footer-info-item" data-track="click_maps_footer">
 							<div class="footer-info-icon">
@@ -824,7 +832,7 @@
 							<div class="footer-info-text">R. Carlos Michel, 66, Centro - Itabirito/MG</div>
 						</a>
 
-						<a href="https://wa.me/5531987950463" target="_blank" rel="noopener" class="footer-info-item" data-track="click_whatsapp_footer" aria-label="Fale conosco no WhatsApp">							<div class="footer-info-icon">
+						<a href="https://wa.me/5531987950463" target="_blank" rel="noopener" class="footer-info-item" data-track="click_whatsapp_footer" aria-label="Fale conosco no WhatsApp pelo número 31 3561-3966">							<div class="footer-info-icon">
 								<img src="images/phone-circle-fill.svg" alt="" aria-hidden="true">
 							</div>
 							<div class="footer-info-text">(31) 3561-3966</div>
@@ -902,8 +910,8 @@
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/wow.min.js"></script>
-	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+	<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script> -->
 	<script src="js/script.js"></script>
 </body>
 
