--- a/index.html
+++ b/index.html
@@ -70,17 +70,26 @@
 	<link rel="icon" href="images/favicon-white.svg">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-	<link rel="stylesheet" href="css/swiper-bundle.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.min.css">
-	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	
+	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" 
+          rel="stylesheet" 
+          media="print" 
+          onload="this.media='all'">
 	<link rel="stylesheet" 
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@300;400;500;700&display=swap" 
       media="print" 
       onload="this.media='all'">
-	<noscript>
+
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/magnific-popup.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/animate.min.css" media="print" onload="this.media='all'">
+	<link rel="stylesheet" href="css/style.css">
+
+    <noscript>
+        <link rel="stylesheet" href="css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="css/magnific-popup.min.css">
+        <link rel="stylesheet" href="css/animate.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@300;400;500;700&display=swap">
 	</noscript>
 	<title>Engeplena Engenharia - Desde 2006 no seu time | Itabirito-MG</title>
@@ -193,10 +202,12 @@
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
                     <img src="images/banner-bg-1.jpg" 
-                         alt="Engenheiro civil realizando medição em obra com teodolito ao pôr do sol" 
-                         class="slide-bg"
-                         fetchpriority="high"
-                         loading="eager">
+						srcset="images/banner-bg-1-mobile.jpg 600w, images/banner-bg-1.jpg 1920w"
+     					sizes="(max-width: 600px) 100vw, 100vw"
+						alt="Engenheiro civil realizando medição em obra com teodolito ao pôr do sol" 
+						class="slide-bg"
+						fetchpriority="high"
+						loading="eager">
                          
                     <div class="banner-content">
                         <div class="banner-subtitle wow fadeIn">Fundada em 2006</div>
@@ -209,9 +220,12 @@
 
                 <div class="swiper-slide">
                     <img src="images/banner-bg-2.jpg" 
-                         alt="Ferramentas de construção civil e capacete de segurança em obra" 
-                         class="slide-bg"
-                         loading="lazy">
+						srcset="images/banner-bg-2-mobile.jpg 600w, images/banner-bg-2.jpg 1920w"
+						sizes="(max-width: 600px) 100vw, 100vw"
+						alt="Ferramentas de construção civil e capacete de segurança em obra" 
+						class="slide-bg"
+						fetchpriority="high"
+						loading="lazy">
 
                     <div class="banner-content">
                         <div class="banner-subtitle wow fadeIn">Excelência Técnica</div>
@@ -222,9 +236,12 @@
 
                 <div class="swiper-slide">
                     <img src="images/banner-bg-3.jpg" 
-                         alt="Engenheiro segurando plantas de projeto com estrutura metálica ao fundo" 
-                         class="slide-bg"
-                         loading="lazy">
+						srcset="images/banner-bg-3-mobile.jpg 600w, images/banner-bg-3.jpg 1920w"
+						sizes="(max-width: 600px) 100vw, 100vw"
+						alt="Engenheiro segurando plantas de projeto com estrutura metálica ao fundo" 
+						class="slide-bg"
+						fetchpriority="high"
+						loading="lazy">
 
                     <div class="banner-content">
                         <div class="banner-subtitle">Responsabilidade e Segurança</div>
@@ -910,8 +927,7 @@
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/wow.min.js"></script>
-	<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script> -->
+	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
