--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@300;400;500;700&display=swap">
 	</noscript>
+
+	<link rel="preload" as="image" href="images/banner-bg-1-mobile.jpg" media="(max-width: 600px)">
+    <link rel="preload" as="image" href="images/banner-bg-1.jpg" media="(min-width: 601px)">
+	<link rel="preload" as="image" href="images/banner-bg-2-mobile.jpg" media="(max-width: 600px)">
+    <link rel="preload" as="image" href="images/banner-bg-2.jpg" media="(min-width: 601px)">
+	<link rel="preload" as="image" href="images/banner-bg-3-mobile.jpg" media="(max-width: 600px)">
+    <link rel="preload" as="image" href="images/banner-bg-3.jpg" media="(min-width: 601px)">
 	<title>Engeplena Engenharia - Desde 2006 no seu time | Itabirito-MG</title>
 </head>
 
@@ -203,9 +210,10 @@
 				<div class="swiper-slide">
                     <img src="images/banner-bg-1.jpg" 
 						srcset="images/banner-bg-1-mobile.jpg 600w, images/banner-bg-1.jpg 1920w"
-     					sizes="(max-width: 600px) 100vw, 100vw"
+                     	sizes="(max-width: 600px) 100vw, 100vw"
 						alt="Engenheiro civil realizando medição em obra com teodolito ao pôr do sol" 
 						class="slide-bg"
+						width="1920" height="850"
 						fetchpriority="high"
 						loading="eager">
                          
@@ -224,6 +232,7 @@
 						sizes="(max-width: 600px) 100vw, 100vw"
 						alt="Ferramentas de construção civil e capacete de segurança em obra" 
 						class="slide-bg"
+						width="1920" height="850"
 						fetchpriority="high"
 						loading="lazy">
 
@@ -240,6 +249,7 @@
 						sizes="(max-width: 600px) 100vw, 100vw"
 						alt="Engenheiro segurando plantas de projeto com estrutura metálica ao fundo" 
 						class="slide-bg"
+						width="1920" height="850"
 						fetchpriority="high"
 						loading="lazy">
 
@@ -472,7 +482,7 @@
 		</div>
 	</section>
 
-	<section class="s-portfolio-carousel" id="s-gallery" style="background-image: url('images/reviews-bg.png');">
+	<section class="s-portfolio-carousel" id="s-gallery" style="background-image: url('images/reviews-bg.webp');">
 		<div class="container">
 			<h2 class="center-title color-white wow fadeIn" data-wow-delay="0.1s">Nosso Portfólio</h2>
 
@@ -927,7 +937,7 @@
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/magnific-popup.min.js"></script>
 	<script src="js/wow.min.js"></script>
-	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
 	<script src="js/script.js"></script>
 </body>
 
