--- a/index.html
+++ b/index.html
@@ -933,12 +933,12 @@
 		</a>
 	</aside>
 	
-	<script src="js/jquery-3.7.0.min.js"></script>
-	<script src="js/swiper-bundle.min.js"></script>
-	<script src="js/magnific-popup.min.js"></script>
-	<script src="js/wow.min.js"></script>
-	<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
-	<script src="js/script.js"></script>
+	<script src="js/jquery-3.7.0.min.js" defer></script>
+	<script src="js/swiper-bundle.min.js" defer></script>
+	<script src="js/magnific-popup.min.js" defer></script>
+	<script src="js/wow.min.js" defer></script>
+	<script src="https://d3js.org/d3.v5.min.js" defer></script>
+	<script src="js/script.js" defer></script>
 </body>
 
 </html>
