--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="css/magnific-popup.min.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="css/animate.min.css" media="print" onload="this.media='all'">
+	<link rel="preload" href="css/style.css" as="style">
 	<link rel="stylesheet" href="css/style.css">
 
     <noscript>
@@ -93,12 +94,12 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@300;400;500;700&display=swap">
 	</noscript>
 
-	<link rel="preload" as="image" href="images/banner-bg-1-mobile.jpg" media="(max-width: 600px)">
-    <link rel="preload" as="image" href="images/banner-bg-1.jpg" media="(min-width: 601px)">
-	<link rel="preload" as="image" href="images/banner-bg-2-mobile.jpg" media="(max-width: 600px)">
-    <link rel="preload" as="image" href="images/banner-bg-2.jpg" media="(min-width: 601px)">
-	<link rel="preload" as="image" href="images/banner-bg-3-mobile.jpg" media="(max-width: 600px)">
-    <link rel="preload" as="image" href="images/banner-bg-3.jpg" media="(min-width: 601px)">
+	<link rel="preload" as="image" href="images/banner-bg-1-mobile.webp" media="(max-width: 600px)">
+    <link rel="preload" as="image" href="images/banner-bg-1.webp" media="(min-width: 601px)">
+	<link rel="preload" as="image" href="images/banner-bg-2-mobile.webp" media="(max-width: 600px)">
+    <link rel="preload" as="image" href="images/banner-bg-2.webp" media="(min-width: 601px)">
+	<link rel="preload" as="image" href="images/banner-bg-3-mobile.webp" media="(max-width: 600px)">
+    <link rel="preload" as="image" href="images/banner-bg-3.webp" media="(min-width: 601px)">
 	<title>Engeplena Engenharia - Desde 2006 no seu time | Itabirito-MG</title>
 </head>
 
@@ -208,8 +209,8 @@
 		<div class="swiper banner-swiper">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide">
-                    <img src="images/banner-bg-1.jpg" 
-						srcset="images/banner-bg-1-mobile.jpg 600w, images/banner-bg-1.jpg 1920w"
+                    <img src="images/banner-bg-1.webp" 
+						srcset="images/banner-bg-1-mobile.webp 600w, images/banner-bg-1.webp 1920w"
                      	sizes="(max-width: 600px) 100vw, 100vw"
 						alt="Engenheiro civil realizando medição em obra com teodolito ao pôr do sol" 
 						class="slide-bg"
@@ -227,8 +228,8 @@
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="images/banner-bg-2.jpg" 
-						srcset="images/banner-bg-2-mobile.jpg 600w, images/banner-bg-2.jpg 1920w"
+                    <img src="images/banner-bg-2.webp" 
+						srcset="images/banner-bg-2-mobile.webp 600w, images/banner-bg-2.webp 1920w"
 						sizes="(max-width: 600px) 100vw, 100vw"
 						alt="Ferramentas de construção civil e capacete de segurança em obra" 
 						class="slide-bg"
@@ -244,8 +245,8 @@
                 </div>
 
                 <div class="swiper-slide">
-                    <img src="images/banner-bg-3.jpg" 
-						srcset="images/banner-bg-3-mobile.jpg 600w, images/banner-bg-3.jpg 1920w"
+                    <img src="images/banner-bg-3.webp" 
+						srcset="images/banner-bg-3-mobile.webp 600w, images/banner-bg-3.webp 1920w"
 						sizes="(max-width: 600px) 100vw, 100vw"
 						alt="Engenheiro segurando plantas de projeto com estrutura metálica ao fundo" 
 						class="slide-bg"
@@ -854,33 +855,33 @@
 						
 						<a href="https://maps.app.goo.gl/mqW2MmhR8gj7zPjw8" target="_blank" rel="noopener" class="footer-info-item" data-track="click_maps_footer">
 							<div class="footer-info-icon">
-								<img src="images/location-circle-fill.svg" alt="" aria-hidden="true">
+								<img src="images/location-circle-fill.svg" alt="" aria-hidden="true" width="25" height="25">
 							</div>
 							<div class="footer-info-text">R. Carlos Michel, 66, Centro - Itabirito/MG</div>
 						</a>
 
 						<a href="https://wa.me/5531987950463" target="_blank" rel="noopener" class="footer-info-item" data-track="click_whatsapp_footer" aria-label="Fale conosco no WhatsApp pelo número 31 3561-3966">							<div class="footer-info-icon">
-								<img src="images/phone-circle-fill.svg" alt="" aria-hidden="true">
+								<img src="images/phone-circle-fill.svg" alt="" aria-hidden="true" width="25" height="25">
 							</div>
 							<div class="footer-info-text">(31) 3561-3966</div>
 						</a>
 
 						<a href="https://wa.me/5531987950463" target="_blank" rel="noopener" class="footer-info-item">
 							<div class="footer-info-icon">
-								<img src="images/whatsapp-circle-fill.svg" alt="" aria-hidden="true"> 
+								<img src="images/whatsapp-circle-fill.svg" alt="" aria-hidden="true" width="25" height="25"> 
 							</div>
 							<div class="footer-info-text">WhatsApp Comercial</div>
 						</a>
 
 						<a href="https://www.instagram.com/engeplena/" target="_blank" rel="noopener" class="footer-info-item" data-track="click_instagram_footer" aria-label="Siga a Engeplena no Instagram">							<div class="footer-info-icon">
-								<img src="images/instagram-circle-fill.svg" alt="" aria-hidden="true">
+								<img src="images/instagram-circle-fill.svg" alt="" aria-hidden="true" width="25" height="25">
 							</div>
 							<div class="footer-info-text">@engeplena</div>
 						</a>
 
 						<a href="https://www.facebook.com/engeplena" target="_blank" rel="noopener" class="footer-info-item" data-track="click_facebook_footer" aria-label="Curta a Engeplena no Facebook">
 							<div class="footer-info-icon">
-								<img src="images/facebook-circle-fill.svg" alt="" aria-hidden="true">
+								<img src="images/facebook-circle-fill.svg" alt="" aria-hidden="true" width="25" height="25">
 
 							</div>
 							<div class="footer-info-text">/engeplena</div>
@@ -888,7 +889,7 @@
 
 						<a href="mailto:contato@engeplena.com.br" class="footer-info-item" data-track="click_email_footer">
 							<div class="footer-info-icon">
-								<img src="images/email-circle-fill.svg" alt="" aria-hidden="true">
+								<img src="images/email-circle-fill.svg" alt="" aria-hidden="true" width="25" height="25">
 							</div>
 							<div class="footer-info-text">contato@engeplena.com.br</div>
 						</a>
