--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <body>
 
-	<div class="modal-form mfp-hide mfp-with-anim" id="modal-form">
+	<div class="modal-form mfp-hide mfp-with-anim" id="modal-form" style="display:none">
 
 		<div class="modal-form-head">
 			<div class="modal-form-logo">
@@ -938,7 +938,6 @@
 	<script src="js/swiper-bundle.min.js" defer></script>
 	<script src="js/magnific-popup.min.js" defer></script>
 	<script src="js/wow.min.js" defer></script>
-	<script src="https://d3js.org/d3.v5.min.js" defer></script>
 	<script src="js/script.js" defer></script>
 </body>
 
