feat: Otimiza CSS

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 					<ul class="why-features">
 						<li class="why-features-item wow fadeInUp" data-wow-delay="0.3s">
 							<div class="why-features-icon">
-								<img src="images/favicon-green.svg" alt="" aria-hidden="true" width="25" height="25">
+								<img src="images/favicon-green.svg" alt="" aria-hidden="true" width="25" height="25" loading="eager">
 							</div>
 							<div class="why-features-right">
 								<h3 class="why-features-title">
@@ -610,7 +610,7 @@
 
 						<li class="why-features-item wow fadeInUp" data-wow-delay="0.4s">
 							<div class="why-features-icon">
-								<img src="images/favicon-green.svg" alt="" aria-hidden="true" width="25" height="25">
+								<img src="images/favicon-green.svg" alt="" aria-hidden="true" width="25" height="25" loading="eager"> 
 							</div>
 							<div class="why-features-right">
 								<h3 class="why-features-title">
@@ -814,7 +814,7 @@
 				<div class="footer-left">
 					<div class="footer-logo">
 						<a href="#" aria-label="Voltar ao topo">
-							<img src="images/logo_mono.png" alt="Engeplena Engenharia" width="200" height="auto">
+							<img src="images/logo_mono.png" alt="Engeplena Engenharia" width="200" height="auto" loading="eager">
 						</a>
 					</div>
 					<div class="footer-desc">
