feat: Implementa ajustes finos

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<li><a class="anchor-link" href="#s-services">Serviços</a></li>
 					<li><a class="anchor-link" href="#s-gallery">Portifólio</a></li>
 					<li><a class="anchor-link" href="#s-team">Equipe</a></li>
-					<li><a class="anchor-link" href="#s-covenant">Clientes</a></li>
+					<li><a class="anchor-link" href="#s-partners">Clientes</a></li>
 					<li><a class="anchor-link" href="#s-contact">Contato</a></li>
 				</ul>
 			</nav>
@@ -190,9 +190,9 @@
 					<ul>
 						<li><a class="anchor-link" href="#s-about">A empresa</a></li>
 						<li><a class="anchor-link" href="#s-services">Serviços</a></li>
-						<li><a class="anchor-link" href="#s-gallery">Galeria</a></li>
+						<li><a class="anchor-link" href="#s-gallery">Portifólio</a></li>
 						<li><a class="anchor-link" href="#s-team">Equipe</a></li>
-						<li><a class="anchor-link" href="#s-covenant">Clientes</a></li>
+						<li><a class="anchor-link" href="#s-partners">Clientes</a></li>
 						<li><a class="anchor-link" href="#s-contact">Contato</a></li>
 					</ul>
 				</nav>
@@ -911,22 +911,22 @@
 		<a href="https://wa.me/5531987950463" target="_blank" rel="noopener noreferrer" 
 		aria-label="Fale conosco no Whatsapp" title="Fale conosco no Whatsapp"
 		data-track="click_whatsapp_sidebar">
-			<img src="images/whatsapp-outline.svg" alt="" aria-hidden="true" width="24" height="24">
+			<img src="images/whatsapp-circle-fill.svg" alt="" aria-hidden="true">
 		</a>
 		<a href="https://www.instagram.com/engeplena/" target="_blank" rel="noopener noreferrer" 
 		aria-label="Siga-nos no Instagram" title="Siga-nos no Instagram"
 		data-track="click_instagram_sidebar">
-			<img src="images/instagram-outline.svg" alt="" aria-hidden="true" width="24" height="24">
+			<img src="images/instagram-circle-fill.svg" alt="" aria-hidden="true">
 		</a>
 		<a href="https://www.facebook.com/engeplena" target="_blank" rel="noopener noreferrer" 
 		aria-label="Curta nossa página no Facebook" title="Curta nossa página no Facebook"
 		data-track="click_facebook_sidebar">
-			<img src="images/facebook-outline.svg" alt="" aria-hidden="true" width="24" height="24">
+			<img src="images/facebook-circle-fill.svg" alt="" aria-hidden="true">
 		</a>
 		<a href="mailto:contato@engeplena.com.br" 
 		aria-label="Envie um Email" title="Envie um Email"
 		data-track="click_email_sidebar">
-			<img src="images/email-outline.svg" alt="" aria-hidden="true" width="24" height="24">
+			<img src="images/email-circle-fill.svg" alt="" aria-hidden="true" style="width:30px;height:30px">
 		</a>
 	</aside>
 	
