feat: Adiciona tag do google Analytics

--- a/index.html
+++ b/index.html
@@ -40,12 +40,23 @@
 </script>
 
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKRNWZQ6QW"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LKRNWZQ6QW');
+    </script>
+
 	<meta charset="UTF-8">
 
 	<!-- Remove indexação por enquanto para evitar redirecionamento para o github pages-->
 	<meta name="robots" content="noindex, nofollow">
 	<!-- Remove indexação por enquanto para evitar redirecionamento para o github pages-->
-
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Engeplena Engenharia - Desde 2006 no seu time. Projetos de engenharia, consultoria ambiental e plotagem em Itabirito-MG. Integridade, aprendizado e resultados.">
